@@ -89,13 +89,13 @@ namespace std
       return __x < _Tp() ? -__x : __x;
     }
 
-  inline float
-  abs(float __x)
-  { return __builtin_fabsf(__x); }
-
   inline double
   abs(double __x)
   { return __builtin_fabs(__x); }
+
+  inline float
+  abs(float __x)
+  { return __builtin_fabsf(__x); }
 
   inline long double
   abs(long double __x)
@@ -119,6 +119,8 @@ namespace std
   acos(long double __x) { return ::acos(static_cast<double>(__x)); }
 #endif
 
+  using ::asin;
+
 #if _GLIBCPP_HAVE_ASINF
   inline float 
   asin(float __x) { return ::asinf(__x); }
@@ -126,8 +128,6 @@ namespace std
   inline float 
   asin(float __x) { return ::asin(static_cast<double>(__x)); }
 #endif
-
-  using ::asin;
 
 #if _GLIBCPP_HAVE_ASINL
   inline long double 
@@ -137,6 +137,8 @@ namespace std
   asin(long double __x) { return ::asin(static_cast<double>(__x)); }
 #endif
 
+  using ::atan;
+
 #if _GLIBCPP_HAVE_ATANF
   inline float 
   atan(float __x) { return ::atanf(__x); }
@@ -145,8 +147,6 @@ namespace std
   atan(float __x) { return ::atan(static_cast<double>(__x)); }
 #endif
 
-  using ::atan;
-
 #if _GLIBCPP_HAVE_ATANL
   inline long double 
   atan(long double __x) { return ::atanl(__x); }
@@ -154,6 +154,8 @@ namespace std
   inline long double 
   atan(long double __x) { return ::atan(static_cast<double>(__x)); }
 #endif
+
+  using ::atan2;
 
 #if _GLIBCPP_HAVE_ATAN2F
   inline float 
@@ -164,8 +166,6 @@ namespace std
   { return ::atan2(static_cast<double>(__y), static_cast<double>(__x)); }
 #endif
 
-  using ::atan2;
-
 #if _GLIBCPP_HAVE_ATAN2L
   inline long double 
   atan2(long double __y, long double __x) { return ::atan2l(__y, __x); }
@@ -175,6 +175,8 @@ namespace std
   { return ::atan2(static_cast<double>(__y), static_cast<double>(__x)); }
 #endif
 
+  using ::ceil;
+
 #if _GLIBCPP_HAVE_CEILF
   inline float 
   ceil(float __x) { return ::ceilf(__x); }
@@ -182,8 +184,6 @@ namespace std
   inline float 
   ceil(float __x) { return ::ceil(static_cast<double>(__x)); }
 #endif
-
-  using ::ceil;
 
 #if _GLIBCPP_HAVE_CEILL
   inline long double 
@@ -193,15 +193,17 @@ namespace std
   ceil(long double __x) { return ::ceil(static_cast<double>(__x)); }
 #endif
 
+  using ::cos;
+
   inline float
   cos(float __x)
   { return __builtin_cosf(__x); }
 
-  using ::cos;
-
   inline long double
   cos(long double __x)
   { return __builtin_cosl(__x); }
+
+  using ::cosh;
 
 #if _GLIBCPP_HAVE_COSHF
   inline float 
@@ -211,8 +213,6 @@ namespace std
   cosh(float __x) { return ::cosh(static_cast<double>(__x)); }
 #endif
 
-  using ::cosh;
-
 #if _GLIBCPP_HAVE_COSHL
   inline long double 
   cosh(long double __x) { return ::coshl(__x); }
@@ -220,6 +220,8 @@ namespace std
   inline long double 
   cosh(long double __x) { return ::cosh(static_cast<double>(__x)); }
 #endif
+
+  using ::exp;
 
 #if _GLIBCPP_HAVE_EXPF
   inline float 
@@ -229,8 +231,6 @@ namespace std
   exp(float __x) { return ::exp(static_cast<double>(__x)); }
 #endif
 
-  using ::exp;
-
 #if _GLIBCPP_HAVE_EXPL
   inline long double 
   exp(long double __x) { return ::expl(__x); }
@@ -239,15 +239,17 @@ namespace std
   exp(long double __x) { return ::exp(static_cast<double>(__x)); }
 #endif
 
+  using ::fabs;
+
   inline float
   fabs(float __x)
   { return __builtin_fabsf(__x); }
 
-  using ::fabs;
-
   inline long double
   fabs(long double __x)
   { return __builtin_fabsl(__x); }
+
+  using ::floor;
 
 #if _GLIBCPP_HAVE_FLOORF
   inline float 
@@ -257,8 +259,6 @@ namespace std
   floor(float __x) { return ::floor(static_cast<double>(__x)); }
 #endif
 
-  using ::floor;
-
 #if _GLIBCPP_HAVE_FLOORL
   inline long double 
   floor(long double __x) { return ::floorl(__x); }
@@ -266,6 +266,8 @@ namespace std
   inline long double 
   floor(long double __x) { return ::floor(static_cast<double>(__x)); }
 #endif
+
+  using ::fmod;
 
 #if _GLIBCPP_HAVE_FMODF
   inline float 
@@ -276,8 +278,6 @@ namespace std
   { return ::fmod(static_cast<double>(__x), static_cast<double>(__y)); }
 #endif
 
-  using ::fmod;
-
 #if _GLIBCPP_HAVE_FMODL
   inline long double 
   fmod(long double __x, long double __y) { return ::fmodl(__x, __y); }
@@ -287,6 +287,8 @@ namespace std
   { return ::fmod(static_cast<double>(__x), static_cast<double>(__y)); }
 #endif
 
+  using ::frexp;
+
 #if _GLIBCPP_HAVE_FREXPF
   inline float 
   frexp(float __x, int* __exp) { return ::frexpf(__x, __exp); }
@@ -294,8 +296,6 @@ namespace std
   inline float 
   frexp(float __x, int* __exp) { return ::frexp(__x, __exp); }
 #endif
-
-  using ::frexp;
 
 #if _GLIBCPP_HAVE_FREXPL
   inline long double 
@@ -306,6 +306,8 @@ namespace std
   { return ::frexp(static_cast<double>(__x), __exp); }
 #endif
 
+  using ::ldexp;
+
 #if _GLIBCPP_HAVE_LDEXPF
   inline float 
   ldexp(float __x, int __exp) { return ::ldexpf(__x, __exp); }
@@ -314,8 +316,6 @@ namespace std
   ldexp(float __x, int __exp)
   { return ::ldexp(static_cast<double>(__x), __exp); }
 #endif
-
-  using ::ldexp;
 
 #if _GLIBCPP_HAVE_LDEXPL
   inline long double 
@@ -326,6 +326,8 @@ namespace std
   { return ::ldexp(static_cast<double>(__x), __exp); }
 #endif
 
+  using ::log;
+
 #if _GLIBCPP_HAVE_LOGF
   inline float 
   log(float __x) { return ::logf(__x); }
@@ -333,8 +335,6 @@ namespace std
   inline float log(float __x)
   { return ::log(static_cast<double>(__x)); }
 #endif
-
-  using ::log;
 
 #if _GLIBCPP_HAVE_LOGL
   inline long double 
@@ -344,6 +344,8 @@ namespace std
   log(long double __x) { return ::log(static_cast<double>(__x)); }
 #endif
 
+  using ::log10;
+
 #if _GLIBCPP_HAVE_LOG10F
   inline float 
   log10(float __x) { return ::log10f(__x); }
@@ -352,8 +354,6 @@ namespace std
   log10(float __x) { return ::log10(static_cast<double>(__x)); }
 #endif
 
-  using ::log10;
-
 #if _GLIBCPP_HAVE_LOG10L
   inline long double 
   log10(long double __x) { return ::log10l(__x); }
@@ -361,6 +361,8 @@ namespace std
   inline long double 
   log10(long double __x) { return ::log10(static_cast<double>(__x)); }
 #endif
+
+  using ::modf;
 
 #if _GLIBCPP_HAVE_MODFF
   inline float 
@@ -375,8 +377,6 @@ namespace std
     return __res;
   }
 #endif
-
-  using ::modf;
 
 #if _GLIBCPP_HAVE_MODFL
   inline long double 
@@ -400,7 +400,9 @@ namespace std
         ? _Tp(1)/__cmath_power(__x, -__n)
         : __cmath_power(__x, __n);
     }
-  
+
+  using ::pow;
+
 #if _GLIBCPP_HAVE_POWF
   inline float 
   pow(float __x, float __y) { return ::powf(__x, __y); }
@@ -409,8 +411,6 @@ namespace std
   pow(float __x, float __y)
   { return ::pow(static_cast<double>(__x), static_cast<double>(__y)); }
 #endif
-
-  using ::pow;
 
 #if _GLIBCPP_HAVE_POWL
   inline long double 
@@ -421,27 +421,29 @@ namespace std
   { return ::pow(static_cast<double>(__x), static_cast<double>(__y)); }
 #endif
 
-  inline float 
-  pow(float __x, int __n)
-  { return __pow_helper(__x, __n); }
-
   inline double 
   pow(double __x, int __i)
   { return __pow_helper(__x, __i); }
+
+  inline float 
+  pow(float __x, int __n)
+  { return __pow_helper(__x, __n); }
 
   inline long double 
   pow(long double __x, int __n)
   { return __pow_helper(__x, __n); }
 
+  using ::sin;
+
   inline float
   sin(float __x)
   { return __builtin_sinf(__x); }
 
-  using ::sin;
-
   inline long double
   sin(long double __x)
   { return __builtin_sinl(__x); }
+
+  using ::sinh;
 
 #if _GLIBCPP_HAVE_SINHF
   inline float 
@@ -451,8 +453,6 @@ namespace std
   sinh(float __x) { return ::sinh(static_cast<double>(__x)); }
 #endif
 
-  using ::sinh;
-
 #if _GLIBCPP_HAVE_SINHL
   inline long double 
   sinh(long double __x) { return ::sinhl(__x); }
@@ -461,15 +461,17 @@ namespace std
   sinh(long double __x) { return ::sinh(static_cast<double>(__x)); }
 #endif
 
+  using ::sqrt;
+
   inline float
   sqrt(float __x)
   { return __builtin_sqrtf(__x); }
 
-  using ::sqrt;
-
   inline long double
   sqrt(long double __x)
   { return __builtin_sqrtl(__x); }
+
+  using ::tan;
 
 #if _GLIBCPP_HAVE_TANF
   inline float 
@@ -479,8 +481,6 @@ namespace std
   tan(float __x) { return ::tan(static_cast<double>(__x)); }
 #endif
 
-  using ::tan;
-
 #if _GLIBCPP_HAVE_TANL
   inline long double 
   tan(long double __x) { return ::tanl(__x); }
@@ -489,6 +489,8 @@ namespace std
   tan(long double __x) { return ::tan(static_cast<double>(__x)); }
 #endif
 
+  using ::tanh;
+
 #if _GLIBCPP_HAVE_TANHF
   inline float 
   tanh(float __x) { return ::tanhf(__x); }
@@ -496,8 +498,6 @@ namespace std
   inline float 
   tanh(float __x) { return ::tanh(static_cast<double>(__x)); }
 #endif
-
-  using ::tanh;
 
 #if _GLIBCPP_HAVE_TANHL
   inline long double 
